tests/cn/accesses_on_spec/clientfile.c.test
return code: 1
./clientfile.exec.c:82:16: error: call to undeclared function 'foo'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   82 |     __cn_ret = foo(1);
      |                ^
1 error generated.
Failed to compile 'clientfile.exec.c'.